# jepa-wm

./: .gitignore  README.md  STATUS.md  progress.md  pyproject.toml
jepa_wm/: __init__.py  config.py  data.py  envs.py  eval.py  metrics.py  models.py  planner.py  train.py  viz.py
runs/: metrics.jsonl
runs/round1_r1-floor/: summary.json
runs/round2_r2-distractor/: summary.json
runs/round3_r3-umaze/: summary.json
scripts/: diagnose.py  probe_env.py  run_round.py  spike_distractor.py  spike_quasimetric.py  spike_umaze.py  sweep_latent_dim.py
